--- a/estilos.css
+++ b/estilos.css
@@ -10,6 +10,8 @@ body{
 .parrafo{
   width: 80%;
   height:80%;
-  margin: 0px auto;
-  color: white;  
+  margin: 0px auto;  
+}
+p{
+color:red;
 }
